--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.15.3",
     "next": "^2.4.9",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
   "scripts": {
-    "dev": "next"
+    "dev": "node server.js"
   }
 }
